--- a/.github/workflows/ecr-deployment.yaml
+++ b/.github/workflows/ecr-deployment.yaml
@@ -27,7 +27,7 @@ jobs:
         id: build-image
         run: |
           docker build -t my-app .
-          docker tag my-app:latest ${{ secrets.ECR_REPOSITORY_URI }}:latest
+          docker tag my-app ${{ secrets.ECR_REPOSITORY_URI }}:latest
           docker push ${{ secrets.ECR_REPOSITORY_URI }}:latest
 
       - name: Fill in the new image in the ECS task definition
