--- a/.github/workflows/ecr-deployment.yaml
+++ b/.github/workflows/ecr-deployment.yaml
@@ -35,8 +35,8 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: ./task-definition.json
-          container-name: my-app:latest
-          image: ${{ secrets.ECR_REPOSITORY }}
+          container-name: ${{ secrets.ECR_REPOSITORY }}
+          image: ${{ secrets.ECR_REPOSITORY }}:latest
 
       - name: Deploy ECS service
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
