--- a/.github/workflows/ecr-deployment.yaml
+++ b/.github/workflows/ecr-deployment.yaml
@@ -35,7 +35,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: ./task-definition.json
-          container-name: ${{ secrets.ECR_REPOSITORY }}
+          container-name: resume-app-task
           image: ${{ secrets.ECR_REPOSITORY }}:latest
 
       - name: Deploy ECS service
